<resources>
    <string name="app_name">Quiz app</string>
    <string name="header">Test your knowledge\n about C#</string>
    <string name="footer">created by Nodirbek Abdulaxadov</string>
    <string name="questions">Questions</string>
    <string name="next">Next</string>
    <string name="home">Home</string>
    <string name="radioAnswer1">radioAnswer1</string>
    <string name="radioAnswer2">radioAnswer2</string>
    <string name="radioAnswer3">radioAnswer3</string>
    <string name="radioAnswer4">radioAnswer4</string>
    <string name="no_records_yet">No records yet</string>
    <string name="start">Start</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="select_method">Select method</string>
    <string name="enter_your_answer_here">Enter your answer here</string>
    <string-array name="testMethods">
        <item>One choice</item>
        <item>Multiple choice</item>
        <item>Write answer</item>
    </string-array>

</resources>