<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
   >

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">


        <TextView
            android:id="@+id/questionsState"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/accent_material_light"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/questionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/questionsState"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:text="@string/questions"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:layout_below="@id/questionText">
            <RadioGroup
                android:id="@+id/answersGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:layout_centerVertical="true"
                android:focusable="true">

                <RadioButton
                    android:id="@+id/radioAnswer1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radioAnswer1"
                    android:checked="false"
                    android:textSize="16sp"/>

                <RadioButton
                    android:id="@+id/radioAnswer2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radioAnswer2"
                    android:checked="false"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/radioAnswer3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radioAnswer3"
                    android:checked="false"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/radioAnswer4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radioAnswer4"
                    android:checked="false"
                    android:textSize="16sp" />

            </RadioGroup>
        </ScrollView>

        <Button
            android:id="@+id/nextButton"
            android:layout_width="130dp"
            android:layout_height="55dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:text="@string/next"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/homeButton"
            android:layout_width="130dp"
            android:layout_height="55dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:text="@string/home"
            android:textColor="#ffffff" />
    </RelativeLayout>
</ScrollView>