<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:fillViewport="true">

    <RelativeLayout
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/questionsState"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="-10dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/accent_material_light"
        android:textSize="30sp"/>

        <TextView
            android:id="@+id/questionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/questionsState"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:text="@string/questions"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/userAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:ems="15"
        android:hint="@string/enter_your_answer_here"
        android:inputType="text"
        android:textColor="#313131" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="130dp"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:text="@string/next"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/homeButton"
        android:layout_width="130dp"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:text="@string/home"
        android:textColor="#ffffff" />
    </RelativeLayout>

</ScrollView>