<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="ExtraText"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/header"
            android:textAlignment="center"
            android:textSize="30sp" />"

        <EditText
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/textView"
            android:layout_marginTop="30dp"
            android:ems="15"
            android:hint="@string/enter_your_name"
            android:inputType="text"
            android:textColor="#313131" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/userName"
        android:layout_marginTop="28dp"
        android:layout_alignParentLeft="true"
        android:layout_toStartOf="@id/testMethodSpinner"
        android:text="@string/select_method"
        android:textAlignment="center"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/testMethodSpinner"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/userName"
        android:layout_alignParentRight="true"
        android:layout_marginTop="30dp"
        android:textAlignment="textEnd"
        android:entries="@array/testMethods"/>

    <Button
        android:id="@+id/startButton"
        android:layout_width="200dp"
        android:layout_height="72dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:layout_below="@id/userName"
        android:text="@string/start"
        android:textColor="#f0f0f0"
        android:textSize="25sp" />
    </RelativeLayout>
</ScrollView>