<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">
    <TextView
        android:id="@+id/questionsState"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:textSize="30sp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/accent_material_light"/>

    <TextView
        android:id="@+id/questionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/questionsState"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:text="@string/questions"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_below="@id/questionText">
        <LinearLayout
            android:id="@+id/checkbox_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/checkBox1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="checkBox1"/>

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="checkBox2" />

            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="checkBox3" />
            <CheckBox
                android:id="@+id/checkBox4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="checkBox4" />

        </LinearLayout>
    </ScrollView>


        <Button
            android:id="@+id/nextButton"
            android:layout_width="130dp"
            android:layout_height="55dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:text="@string/next"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/homeButton"
            android:layout_width="130dp"
            android:layout_height="55dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:text="@string/home"
            android:textColor="#ffffff" />
    </RelativeLayout>
</ScrollView>